ATO-NONE: Tidy code (oidc-api)
- Address minor SonarLint issues